# cr_core_test

./: .clang-format  CMakeLists.txt  example.xml  main.c  scenario.xml
src/: CMakeLists.txt  dynamic_arrays.h  parser.c  parser.h  structs.c  structs.h
